--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
 		"@radix-ui/react-progress": "1.1.1",
 		"@radix-ui/react-radio-group": "1.2.2",
 		"@radix-ui/react-scroll-area": "1.2.2",
-		"@radix-ui/react-select": "2.1.4",
+		"@radix-ui/react-select": "^2.1.4",
 		"@radix-ui/react-separator": "1.1.1",
-		"@radix-ui/react-slider": "1.2.2",
+		"@radix-ui/react-slider": "^1.2.2",
 		"@radix-ui/react-slot": "1.1.1",
 		"@radix-ui/react-switch": "1.1.2",
 		"@radix-ui/react-tabs": "1.1.2",
@@ -53,6 +53,8 @@
 		"react-hook-form": "^7.54.1",
 		"react-resizable-panels": "^2.1.7",
 		"recharts": "2.15.0",
+		"select": "^1.1.2",
+		"settings": "^0.1.1",
 		"sonner": "^1.7.1",
 		"tailwind-merge": "^2.5.5",
 		"tailwindcss-animate": "^1.0.7",
