--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-	"name": "my-v0-project",
+	"name": "zen-di",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev -p 3513",
+		"dev": "next dev",
 		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
+		"start": "next start"
 	},
 	"dependencies": {
-		"@hookform/resolvers": "^3.9.1",
 		"@radix-ui/react-accordion": "1.2.2",
 		"@radix-ui/react-alert-dialog": "1.1.4",
 		"@radix-ui/react-aspect-ratio": "1.1.1",
@@ -27,9 +25,9 @@
 		"@radix-ui/react-progress": "1.1.1",
 		"@radix-ui/react-radio-group": "1.2.2",
 		"@radix-ui/react-scroll-area": "1.2.2",
-		"@radix-ui/react-select": "^2.1.4",
+		"@radix-ui/react-select": "2.1.4",
 		"@radix-ui/react-separator": "1.1.1",
-		"@radix-ui/react-slider": "^1.2.2",
+		"@radix-ui/react-slider": "1.2.2",
 		"@radix-ui/react-slot": "1.1.1",
 		"@radix-ui/react-switch": "1.1.2",
 		"@radix-ui/react-tabs": "1.1.2",
@@ -37,37 +35,32 @@
 		"@radix-ui/react-toggle": "1.1.1",
 		"@radix-ui/react-toggle-group": "1.1.1",
 		"@radix-ui/react-tooltip": "1.1.6",
-		"autoprefixer": "^10.4.20",
 		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
 		"cmdk": "1.0.4",
-		"date-fns": "2.30.0",
 		"embla-carousel-react": "8.5.1",
+		"framer-motion": "^12.23.12",
 		"input-otp": "1.4.1",
 		"lucide-react": "^0.454.0",
-		"next": "15.2.4",
-		"next-themes": "latest",
+		"next": "15.4.5",
+		"next-themes": "0.4.6",
 		"react": "18.3.1",
 		"react-day-picker": "8.10.1",
 		"react-dom": "18.3.1",
-		"react-hook-form": "^7.54.1",
-		"react-resizable-panels": "^2.1.7",
+		"react-hook-form": "7.57.0",
+		"react-resizable-panels": "2.1.9",
 		"recharts": "2.15.0",
-		"select": "^1.1.2",
-		"settings": "^0.1.1",
-		"sonner": "^1.7.1",
-		"tailwind-merge": "^2.5.5",
+		"sonner": "1.7.4",
+		"tailwind-merge": "^3.3.1",
+		"tailwind-variants": "^2.1.0",
 		"tailwindcss-animate": "^1.0.7",
-		"ui": "^0.2.4",
-		"vaul": "^0.9.6",
-		"zod": "^3.24.1"
+		"vaul": "0.9.9"
 	},
 	"devDependencies": {
-		"@types/node": "^22",
-		"@types/react": "^18.2.73",
-		"@types/react-dom": "^18.2.19",
-		"postcss": "^8.5",
-		"tailwindcss": "^3.4.17",
-		"typescript": "^5"
+		"@types/node": "^20.3.3",
+		"@types/react": "^18.2.8",
+		"autoprefixer": "^10.4.15",
+		"postcss": "^8.4.27",
+		"tailwindcss": "^3.3.3",
+		"typescript": "^5.1.6"
 	}
 }
