--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"class-variance-authority": "^0.7.1",
 		"cmdk": "1.0.4",
 		"embla-carousel-react": "8.5.1",
+		"firebase": "^12.0.0",
 		"framer-motion": "^12.23.12",
 		"input-otp": "1.4.1",
 		"lucide-react": "^0.454.0",
@@ -56,6 +57,7 @@
 		"vaul": "0.9.9"
 	},
 	"devDependencies": {
+		"@types/firebase": "^2.4.32",
 		"@types/node": "^20.3.3",
 		"@types/react": "^18.2.8",
 		"autoprefixer": "^10.4.15",
