--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
 		"react": "18.3.1",
 		"react-day-picker": "8.10.1",
 		"react-dom": "18.3.1",
+		"react-firebase-hooks": "^5.1.1",
 		"react-hook-form": "7.57.0",
+		"react-hot-toast": "^2.5.2",
 		"react-resizable-panels": "2.1.9",
 		"recharts": "2.15.0",
 		"sonner": "1.7.4",
@@ -57,12 +59,11 @@
 		"vaul": "0.9.9"
 	},
 	"devDependencies": {
-		"@types/firebase": "^2.4.32",
 		"@types/node": "^20.3.3",
 		"@types/react": "^18.2.8",
-		"autoprefixer": "^10.4.15",
-		"postcss": "^8.4.27",
-		"tailwindcss": "^3.3.3",
+		"autoprefixer": "^10.4.21",
+		"postcss": "^8.5.6",
+		"tailwindcss": "^3.4.17",
 		"typescript": "^5.1.6"
 	}
 }
